--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "plan-trading",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "dist/index.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,13 +17,17 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20251109.0",
-    "typescript": "^5.9.3",
-    "wrangler": "^4.46.0"
+    "@types/node": "^20.11.0",
+    "@types/node-cron": "^3.0.11",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "ccxt": "^4.5.18",
-    "itty-router": "^5.0.22",
+    "dotenv": "^16.4.1",
+    "fastify": "^4.26.0",
+    "node-cron": "^3.0.3",
     "telegraf": "^4.16.3"
   }
 }
